# coki-api-base

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  strategy.ini
.github/workflows/: publish-pypi.yml  unit-tests.yml
coki_api_base/: app.py  cli.py  openapi_renderer.py
coki_api_base/fixtures/: Dockerfile.jinja2  api.py  openapi.yaml.jinja2  openapi_blocks.yaml.jinja2
coki_api_base/fixtures/openapi_generator/: openapi.yaml
coki_api_base/fixtures/openapi_generator/output/.openapi-generator/: FILES
coki_api_base/fixtures/openapi_generator/output/package/: client_README.md
coki_api_base/fixtures/openapi_generator/output/package/client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
coki_api_base/fixtures/openapi_generator/output/package/client/api/: __init__.py  observatory_api.py
coki_api_base/fixtures/openapi_generator/output/package/client/apis/: __init__.py
coki_api_base/fixtures/openapi_generator/output/package/client/docs/: ObservatoryApi.md  PitResponse.md  QueryResponse.md
coki_api_base/fixtures/openapi_generator/output/package/client/model/: __init__.py  pit_response.py  query_response.py
coki_api_base/fixtures/openapi_generator/output/package/client/models/: __init__.py
coki_api_base/fixtures/openapi_generator/output/package/client/test/: test_observatory_api.py  test_pit_response.py  (+1 more)
coki_api_base/openapi_generator/: api-config.yaml
coki_api_base/openapi_generator/templates/: README_onlypackage.mustache
coki_api_base/tests/: test_app.py  test_cli.py  test_openapi_renderer.py
tests/: test_cli.py
tests/fixtures/: openapi.yaml.jinja2
