[metadata]
name = coki-api-base
author = Curtin University
author-email = agent@observatory.academy
summary =
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/The-Academic-Observatory/coki-api-base
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/coki-api-base/issues
    Source Code = https://github.com/The-Academic-Observatory/coki-api-base
python-requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    api

[files]
packages =
    coki_api_base
data_files =
    coki_api_base/openapi_generator = coki_api_base/openapi_generator/*
    coki_api_base/fixtures/openapi_blocks.yaml.jinja2 = coki_api_base/fixtures/openapi_blocks.yaml.jinja2

[entry_points]
console_scripts =
    coki-api-base = coki_api_base.cli:cli

[extras]
tests =
    liccheck>=0.4.9,<1
    flake8>=3.8.0,<4
    coverage>=5.2,<6

